--- a/forsale.html
+++ b/forsale.html
@@ -153,11 +153,11 @@
         <div class="footer-container">
             <img src="images/LOGO-FOR-WEB-200-PIXELS.png" alt="MyDevelopment Logo">
             <div class="company-details">
-                <p>MyDevelopment, Real Estate Construction Company</p>
+                <p>M.Y. Development, Real Estate Construction Company</p>
                 <hr>
-                <p>Aretis 94, Glifada</p>
+                <p>Glyfada</p>
                 <p>Athens - Greece</p>
-                <p>E-mail: info@mydevelopment.gr</p>
+                <p>E-mail: contact@mydevelopment.gr</p>
                 <p>Phone: +306948145786</p>
             </div>
             <div class="footer-nav">
