--- a/index.html
+++ b/index.html
@@ -31,8 +31,18 @@
     
     <section class="hero" id="hero">
         <div class="overlay">
-            <img src="images/LOGO-NEGATIVE-FOR-WEB-200-PIXELS.png" alt="">
-            <h3>Real Estate Construction Company</h3>
+            <img src="images/LOGO-FOR-WEB-200-PIXELS.png" alt="">
+            <div class="hero-text">
+                <h3>Real Estate Construction Company</h3>
+                <p>Welcome to M.Y. Development! We're all about turning your
+                    dream home into a reality. Whether you're looking for a
+                    new place to call home or planning to invest in a
+                    solid property. We specialize in building quality
+                    apartments that meet your needs and stand the test
+                    of time. Our team is experienced and always, by your
+                    side throughout the process.
+                </p>
+            </div>
         </div>
         <div class="thumbnails">
             <img onclick="setImage(0)" id="thumb0">
@@ -58,11 +68,11 @@
                     <div class="project-info">
                         <div class="state">Sold</div>
                         <h3>Modern Apartment Building</h3>
-                        <p>Glifada Attica</p>
+                        <p>Glyfada Attica</p>
                     </div>
                 </div>
                 <div class="project-details">
-                    <p><strong>Location:</strong> Glifada, Attica</p>
+                    <p><strong>Location:</strong> Glyfada, Attica</p>
                     <p><strong>Completion Year:</strong> 2024</p>
                 </div>
             </a>
@@ -72,7 +82,7 @@
                         <img src="images/project2.png" alt="Luxury Villas">
                         <div class="project-info">
                             <div class="state sale">For Sale</div>
-                            <h3>1st floor
+                            <h3>Ground floor - 1st floor
                                 Maisonette</h3>
                             <p>Vasileiou Voulgaroktonou 3, Voula</p>
                         </div>
@@ -90,7 +100,7 @@
                         <img src="images/project3.png" alt="Industrial Complex">
                         <div class="project-info">
                             <div class="state sale">For Sale</div>
-                            <h3>Ground floor
+                            <h3>Ground floor - 1st floor
                                 Maisonette</h3>
                             <p>Vasileiou Voulgaroktonou 3, Voula</p>
                         </div>
@@ -109,11 +119,11 @@
         <div class="footer-container">
             <img src="images/LOGO-FOR-WEB-200-PIXELS.png" alt="MyDevelopment Logo">
             <div class="company-details">
-                <p>MyDevelopment, Real Estate Construction Company</p>
+                <p>M.Y. Development, Real Estate Construction Company</p>
                 <hr>
-                <p>Aretis 94, Glifada</p>
+                <p>Glyfada</p>
                 <p>Athens - Greece</p>
-                <p>E-mail: info@mydevelopment.gr</p>
+                <p>E-mail: contact@mydevelopment.gr</p>
                 <p>Phone: +306948145786</p>
             </div>
             <div class="footer-nav">
