--- a/project-glifada.html
+++ b/project-glifada.html
@@ -33,11 +33,11 @@
         <img src="images/project1.png"></img>
 
         <div class="container">
-            <h2>Glifada Apartment Building - SOLD</h2>
+            <h2>Glyfada Apartment Building - SOLD</h2>
             <p style="margin-bottom: 2rem;"> Welcome to our latest apartment project, a stunning 
                 contemporary residence designed for luxury, comfort, 
                 and functionality. Nestled in a prime location, this 
-                modern building features two exclusive apartments, 
+                modern building features three exclusive apartments, 
                 thoughtfully crafted to provide an exceptional 
                 living experience.</p>
             <h3 style="font-size: 1.2rem; margin-bottom: 1rem;">Sophisticated Design & Premium Living
@@ -55,7 +55,7 @@
         <div class="container">
             <h3>Property Highlights</h3>
             <ul>
-                <li>Two Luxurious Apartments</li>
+                <li>Three Luxurious Apartments</li>
                 <li>Contemporary Interiors</li>
                 <li>Modern Kitchens</li>
                 <li>Elegant Bathrooms</li>
@@ -212,9 +212,20 @@
                         </div>
                         <div class="gallery-item">
                             <img src="images/A2glifada10.jpg" alt="Project Image 4">
-                            <p class="image-label">Bathroom</p>
+                            <p class="image-label">Kitchen</p>
                         </div>
-    
+                        <div class="gallery-item">
+                            <img src="images/Α2glifada3dLivingroom.jpg" alt="Project Image 4">
+                            <p class="image-label">3D Living Room</p>
+                        </div>
+                        <div class="gallery-item">
+                            <img src="images/Α2glifada3dBedroom.jpg" alt="Project Image 4">
+                            <p class="image-label">3D Bedroom</p>
+                        </div>
+                        <div class="gallery-item">
+                            <img src="images/Α2glifada3dBathroom.jpg" alt="Project Image 4">
+                            <p class="image-label">3D Bathroom</p>
+                        </div>
                     </div>
                     
                 </div>
@@ -236,11 +247,11 @@
                         <div class="project-info">
                             <div class="state">Sold</div>
                             <h3>Modern Apartment Building</h3>
-                            <p>Glifada Attica</p>
+                            <p>Glyfada Attica</p>
                         </div>
                     </div>
                     <div class="project-details">
-                        <p><strong>Location:</strong> Glifada, Attica</p>
+                        <p><strong>Location:</strong> Glyfada, Attica</p>
                         <p><strong>Completion Year:</strong> 2024</p>
                     </div>
                 </a>
@@ -289,11 +300,11 @@
         <div class="footer-container">
             <img src="images/LOGO-FOR-WEB-200-PIXELS.png" alt="MyDevelopment Logo">
             <div class="company-details">
-                <p>MyDevelopment, Real Estate Construction Company</p>
+                <p>M.Y. Development, Real Estate Construction Company</p>
                 <hr>
-                <p>Aretis 94, Glifada</p>
+                <p>Glyfada</p>
                 <p>Athens - Greece</p>
-                <p>E-mail: info@mydevelopment.gr</p>
+                <p>E-mail: contact@mydevelopment.gr</p>
                 <p>Phone: +306948145786</p>
             </div>
             <div class="footer-nav">
