--- a/contact.html
+++ b/contact.html
@@ -32,6 +32,7 @@
     <div class="map">
         <iframe src="https://maps.google.com/maps?q=Glifada&t=&z=13&ie=UTF8&iwloc=&output=embed"></iframe>
     </div>
+    
     <section class="contact-section">
         
         <div class="contact-container box one">
@@ -88,11 +89,11 @@
         <div class="footer-container">
             <img src="images/LOGO-FOR-WEB-200-PIXELS.png" alt="MyDevelopment Logo">
             <div class="company-details">
-                <p>MyDevelopment, Real Estate Construction Company</p>
+                <p>M.Y. Development, Real Estate Construction Company</p>
                 <hr>
-                <p>Aretis 94, Glifada</p>
+                <p>Glyfada</p>
                 <p>Athens - Greece</p>
-                <p>E-mail: info@mydevelopment.gr</p>
+                <p>E-mail: contact@mydevelopment.gr</p>
                 <p>Phone: +306948145786</p>
             </div>
             <div class="footer-nav">
