--- a/project-voula115.html
+++ b/project-voula115.html
@@ -136,7 +136,7 @@
     <section class="location property-gallery">
         <section class="photo-gallery">
             <div class="gallery-container">
-                <h3>Property Photo Gallery</h3>
+                <h3>3D RENDERINGS</h3>
                 <div class="gallery-grid">
                     <div class="gallery-item">
                         <img src="images/A2_swimming_pool.jpg" alt="Project Image 1">
@@ -168,20 +168,21 @@
                     <h3>Floor Plan Gallery</h3>
                     <div class="gallery-grid">
                         <div class="gallery-item">
-                            <img src="images/A22ndlevelFloorPlan.png" alt="Project Image 4">
-                            <p class="image-label">2nd Level Floor Plan</p>
-                        </div>
-                        <div class="gallery-item">
                             <img src="images/A2GroundFloorPlan.png" alt="Project Image 4">
                             <p class="image-label">Ground Floor Plan</p>
                         </div>
+                        <div class="gallery-item">
+                            <img src="images/A22ndlevelFloorPlan.png" alt="Project Image 4">
+                            <p class="image-label">2nd Level Floor Plan</p>
+                        </div>
+                        
                         <div class="gallery-item">
                             <img src="images/A2BasementParkingSpacesPlan.png" alt="Project Image 4">
                             <p class="image-label">Basement Parking Spaces Plan</p>
                         </div>
                         <div class="gallery-item">
                             <img src="images/plan1.png" alt="Project Image 1">
-                            <p class="image-label">Building Front View</p>
+                            <p class="image-label">Building Side View</p>
                         </div>
                         <div class="gallery-item">
                             <img src="images/plan2.png" alt="Project Image 2">
@@ -220,11 +221,11 @@
                             <div class="project-info">
                                 <div class="state">Sold</div>
                                 <h3>Modern Apartment Building</h3>
-                                <p>Glifada Attica</p>
+                                <p>Glyfada Attica</p>
                             </div>
                         </div>
                         <div class="project-details">
-                            <p><strong>Location:</strong> Glifada, Attica</p>
+                            <p><strong>Location:</strong> Glyfada, Attica</p>
                             <p><strong>Completion Year:</strong> 2024</p>
                         </div>
                     </a>
@@ -273,11 +274,11 @@
         <div class="footer-container">
             <img src="images/LOGO-FOR-WEB-200-PIXELS.png" alt="MyDevelopment Logo">
             <div class="company-details">
-                <p>MyDevelopment, Real Estate Construction Company</p>
+                <p>M.Y. Development, Real Estate Construction Company</p>
                 <hr>
-                <p>Aretis 94, Glifada</p>
+                <p>Glyfada</p>
                 <p>Athens - Greece</p>
-                <p>E-mail: info@mydevelopment.gr</p>
+                <p>E-mail: contact@mydevelopment.gr</p>
                 <p>Phone: +306948145786</p>
             </div>
             <div class="footer-nav">
