--- a/projects.html
+++ b/projects.html
@@ -131,7 +131,7 @@
         <div class="project-box">
             <img src="images/A1glifada1.jpg" alt="Voula Maisonette">
             <div class="project-details">
-                <h2>Glifada Apartment Building</h2>
+                <h2>Glyfada Apartment Building</h2>
                 <p>Welcome to our latest apartment project, a stunning 
                     contemporary residence designed for luxury, comfort, 
                     and functionality.</p>
@@ -163,11 +163,11 @@
         <div class="footer-container">
             <img src="images/LOGO-FOR-WEB-200-PIXELS.png" alt="MyDevelopment Logo">
             <div class="company-details">
-                <p>MyDevelopment, Real Estate Construction Company</p>
+                <p>M.Y. Development, Real Estate Construction Company</p>
                 <hr>
-                <p>Aretis 94, Glifada</p>
+                <p>Glyfada</p>
                 <p>Athens - Greece</p>
-                <p>E-mail: info@mydevelopment.gr</p>
+                <p>E-mail: contact@mydevelopment.gr</p>
                 <p>Phone: +306948145786</p>
             </div>
             <div class="footer-nav">
