--- a/project-voula166.html
+++ b/project-voula166.html
@@ -226,7 +226,7 @@
                             <img src="images/project2.png" alt="Luxury Villas">
                             <div class="project-info">
                                 <div class="state sale">For Sale</div>
-                                <h3>1st floor
+                                <h3>Ground floor - 1st floor
                                     Maisonette</h3>
                                 <p>Vasileiou Voulgaroktonou 3, Voula</p>
                             </div>
@@ -244,7 +244,7 @@
                             <img src="images/project3.png" alt="Industrial Complex">
                             <div class="project-info">
                                 <div class="state sale">For Sale</div>
-                                <h3>Ground floor
+                                <h3>Ground floor - 1st floor
                                     Maisonette</h3>
                                 <p>Vasileiou Voulgaroktonou 3, Voula</p>
                             </div>
@@ -268,7 +268,7 @@
                 <hr>
                 <p>Glyfada</p>
                 <p>Athens - Greece</p>
-                <p>E-mail: info@mydevelopment.gr</p>
+                <p>E-mail: contact@mydevelopment.gr</p>
                 <p>Phone: +306948145786</p>
             </div>
             <div class="footer-nav">
