--- a/project-voula115.html
+++ b/project-voula115.html
@@ -236,7 +236,7 @@
                             <img src="images/project2.png" alt="Luxury Villas">
                             <div class="project-info">
                                 <div class="state sale">For Sale</div>
-                                <h3>1st floor
+                                <h3>Ground floor - 1st floor
                                     Maisonette</h3>
                                 <p>Vasileiou Voulgaroktonou 3, Voula</p>
                             </div>
@@ -254,7 +254,7 @@
                             <img src="images/project3.png" alt="Industrial Complex">
                             <div class="project-info">
                                 <div class="state sale">For Sale</div>
-                                <h3>Ground floor
+                                <h3>Ground floor - 1st floor
                                     Maisonette</h3>
                                 <p>Vasileiou Voulgaroktonou 3, Voula</p>
                             </div>
