--- a/forsale.html
+++ b/forsale.html
@@ -131,7 +131,8 @@
         <div class="project-box">
             <img src="images/A1 Swimming pool.jpg" alt="Seaside Villa">
             <div class="project-details">
-                <h2>Voula 1st floor Maisonette 166 sq.m.</h2>
+                <h2>Ground floor - 1st floor
+                    Maisonette 166 sq.m.</h2>
                 <p>An exquisite beachfront villa offering panoramic sea views and top-tier amenities.</p>
                 <a href="project-voula166.html" class="view-btn">View Project</a>
             </div>
@@ -140,7 +141,8 @@
         <div class="project-box ">
             <img src="images/A2_swimming_pool.jpg" alt="Luxury Apartments">
             <div class="project-details">
-                <h2>Voula 1st floor Maisonette 115 sq.m.</h2>
+                <h2>Ground floor - 1st floor
+                    Maisonette 115 sq.m.</h2>
                 <p>A modern apartment building featuring two exclusive residences, designed for comfort and elegance.</p>
                 <a href="project-voula115.html" class="view-btn">View Project</a>
             </div>
