--- a/project-glifada.html
+++ b/project-glifada.html
@@ -196,7 +196,7 @@
                         </div>
                         <div class="gallery-item">
                             <img src="images/A2glifada11.jpg" alt="Project Image 4">
-                            <p class="image-label">Bathroom</p>
+                            <p class="image-label">Kitchen</p>
                         </div>
                         <div class="gallery-item">
                             <img src="images/A2glifada12.jpg" alt="Project Image 4">
