--- a/project-voula115.html
+++ b/project-voula115.html
@@ -57,7 +57,7 @@
     </section>
     
     <section class="property-details">
-        <img src="images/A2 Bedroom.jpg" alt="MyDevelopment Building">
+        <img src="images/plan1.png" alt="MyDevelopment Building">
 
         <div class="container">
             <h3>Property Details</h3>
