--- a/project-voula166.html
+++ b/project-voula166.html
@@ -77,6 +77,7 @@
             <ul>
                 <li><strong>Nearest Town (Voula Avenue):</strong> 1.4km</li>
                 <li><strong>Nearest Beach (Athens Beach Club):</strong> 1.6km</li>
+                <li><strong>Glyfada Golf Club of Athens:</strong> 5.1km</li>
                 <li><strong>International Airport:</strong> 18.7km</li>
                 <li><strong>Yacht Marina:</strong> 2km</li>
                 <li><strong>The Ellinikon Experience Park:</strong> 3.7km</li>
