--- a/project-voula166.html
+++ b/project-voula166.html
@@ -128,13 +128,12 @@
             </ul>
         </div>
         <img src="images/pisina.png" alt="MyDevelopment Building">
-
     </section>
     
     <section class="location property-gallery">
         <section class="photo-gallery">
             <div class="gallery-container">
-                <h3>Property Photo Gallery</h3>
+                <h3>3D RENDERINGS</h3>
                 <div class="gallery-grid">
                     <div class="gallery-item">
                         <img src="images/A1_living_room.jpg" alt="Project Image 1">
