--- a/project-voula115.html
+++ b/project-voula115.html
@@ -155,6 +155,10 @@
                         <img src="images/A2 Bathroom.jpg" alt="Project Image 4">
                         <p class="image-label">Bathroom</p>
                     </div>
+                    <div class="gallery-item">
+                        <img src="images/building.PNG" alt="Project Image 4">
+                        <p class="image-label">Building</p>
+                    </div>
                 </div>
                 
             </div>
