--- a/forsale.html
+++ b/forsale.html
@@ -129,7 +129,7 @@
     <section class="projects-wrapper">
         
         <div class="project-box">
-            <img src="images/A1 Swimming pool.jpg" alt="Seaside Villa">
+            <img src="images/A1 Swimming pool.webp" alt="Seaside Villa">
             <div class="project-details">
                 <h2>Ground floor - 1st floor
                     Maisonette 166 sq.m.</h2>
@@ -139,7 +139,7 @@
         </div>
         <!-- Project 2 -->
         <div class="project-box ">
-            <img src="images/A2_swimming_pool.jpg" alt="Luxury Apartments">
+            <img src="images/A2_swimming_pool.webp" alt="Luxury Apartments">
             <div class="project-details">
                 <h2>Ground floor - 1st floor
                     Maisonette 115 sq.m.</h2>
