--- a/project-glifada.html
+++ b/project-glifada.html
@@ -30,7 +30,7 @@
 
     </header>
     <section class="property-intro">
-        <img src="images/project1.png"></img>
+        <img src="images/project1.webp"></img>
 
         <div class="container">
             <h2>Glyfada Apartment Building - SOLD</h2>
@@ -66,7 +66,7 @@
                 <li>Breathtaking View</li>
             </ul>
         </div>
-        <img src="images/A1glifada1.jpg" alt="MyDevelopment Building">
+        <img src="images/A1glifada1.webp" alt="MyDevelopment Building">
 
     </section>
 
@@ -76,75 +76,75 @@
                 <h3>Apartment 1 Photo Gallery</h3>
                 <div class="gallery-grid">
                     <div class="gallery-item">
-                        <img src="images/A1glifada1.jpg" alt="Project Image 1">
+                        <img src="images/A1glifada1.webp" alt="Project Image 1">
                         <p class="image-label">Living Room</p>
                     </div>
                     <div class="gallery-item">
-                        <img src="images/A1glifada2.jpg" alt="Project Image 2">
+                        <img src="images/A1glifada2.webp" alt="Project Image 2">
                         <p class="image-label">Living Room</p>
                     </div>
                     <div class="gallery-item">
-                        <img src="images/A1glifada3.jpg" alt="Project Image 3">
+                        <img src="images/A1glifada3.webp" alt="Project Image 3">
                         <p class="image-label">Living Room</p>
                     </div>
                     <div class="gallery-item">
-                        <img src="images/A1glifada4.jpg" alt="Project Image 4">
+                        <img src="images/A1glifada4.webp" alt="Project Image 4">
                         <p class="image-label">Living Room</p>
                     </div>
                     <div class="gallery-item">
-                        <img src="images/A1glifada5.jpg" alt="Project Image 4">
+                        <img src="images/A1glifada5.webp" alt="Project Image 4">
                         <p class="image-label">Living Room</p>
                     </div>
                     <div class="gallery-item">
-                        <img src="images/A1glifada6.jpg" alt="Project Image 4">
+                        <img src="images/A1glifada6.webp" alt="Project Image 4">
                         <p class="image-label">Kitchen</p>
                     </div>
                     <div class="gallery-item">
-                        <img src="images/A1glifada7.jpg" alt="Project Image 4">
+                        <img src="images/A1glifada7.webp" alt="Project Image 4">
                         <p class="image-label">Kitchen</p>
                     </div>
                     <div class="gallery-item">
-                        <img src="images/A1glifada8.jpg" alt="Project Image 4">
+                        <img src="images/A1glifada8.webp" alt="Project Image 4">
                         <p class="image-label">Kitchen</p>
                     </div>
                     <div class="gallery-item">
-                        <img src="images/A1glifada9.jpg" alt="Project Image 4">
+                        <img src="images/A1glifada9.webp" alt="Project Image 4">
                         <p class="image-label">Living Room</p>
                     </div>
                     <div class="gallery-item">
-                        <img src="images/A1glifada11.jpg" alt="Project Image 4">
+                        <img src="images/A1glifada11.webp" alt="Project Image 4">
                         <p class="image-label">Balcony</p>
                     </div>
                     <div class="gallery-item">
-                        <img src="images/A1glifada12.jpg" alt="Project Image 4">
+                        <img src="images/A1glifada12.webp" alt="Project Image 4">
                         <p class="image-label">Bedroom</p>
                     </div>
                     <div class="gallery-item">
-                        <img src="images/A1glifada13.jpg" alt="Project Image 4">
+                        <img src="images/A1glifada13.webp" alt="Project Image 4">
                         <p class="image-label">Bedroom</p>
                     </div>
                     <div class="gallery-item">
-                        <img src="images/A1glifada14.jpg" alt="Project Image 4">
+                        <img src="images/A1glifada14.webp" alt="Project Image 4">
                         <p class="image-label">Bathroom</p>
                     </div>
                     <div class="gallery-item">
-                        <img src="images/A1glifada15.jpg" alt="Project Image 4">
+                        <img src="images/A1glifada15.webp" alt="Project Image 4">
                         <p class="image-label">Bathroom</p>
                     </div>
                     <div class="gallery-item">
-                        <img src="images/A1glifada16.jpg" alt="Project Image 4">
+                        <img src="images/A1glifada16.webp" alt="Project Image 4">
                         <p class="image-label">Entrance</p>
                     </div>
                     <div class="gallery-item">
-                        <img src="images/3dA1glifada1.jpg" alt="Project Image 4">
+                        <img src="images/3dA1glifada1.webp" alt="Project Image 4">
                         <p class="image-label">3D Bathroom</p>
                     </div>
                     <div class="gallery-item">
-                        <img src="images/3dA1glifada2.jpg" alt="Project Image 4">
+                        <img src="images/3dA1glifada2.webp" alt="Project Image 4">
                         <p class="image-label">3D Bedroom</p>
                     </div>
                     <div class="gallery-item">
-                        <img src="images/3dA1glifada3.jpg" alt="Project Image 4">
+                        <img src="images/3dA1glifada3.webp" alt="Project Image 4">
                         <p class="image-label">3D Living Room</p>
                     </div>
                 </div>
@@ -159,71 +159,71 @@
                     <h3>Apartment 2 Photo Gallery</h3>
                     <div class="gallery-grid">
                         <div class="gallery-item">
-                            <img src="images/A2glifada1.jpg" alt="Project Image 1">
+                            <img src="images/A2glifada1.webp" alt="Project Image 1">
                             <p class="image-label">Balcony View</p>
                         </div>
                         <div class="gallery-item">
-                            <img src="images/A2glifada2.jpg" alt="Project Image 2">
+                            <img src="images/A2glifada2.webp" alt="Project Image 2">
                             <p class="image-label">Balcony View</p>
                         </div>
                         <div class="gallery-item">
-                            <img src="images/A2glifada3.jpg" alt="Project Image 3">
+                            <img src="images/A2glifada3.webp" alt="Project Image 3">
                             <p class="image-label">Balcony View</p>
                         </div>
                         <div class="gallery-item">
-                            <img src="images/A2glifada4.jpg" alt="Project Image 4">
+                            <img src="images/A2glifada4.webp" alt="Project Image 4">
                             <p class="image-label">Balcony View at Night</p>
                         </div>
                         <div class="gallery-item">
-                            <img src="images/A2glifada5.jpg" alt="Project Image 4">
+                            <img src="images/A2glifada5.webp" alt="Project Image 4">
                             <p class="image-label">Living Room</p>
                         </div>
                         <div class="gallery-item">
-                            <img src="images/A2glifada6.jpg" alt="Project Image 4">
+                            <img src="images/A2glifada6.webp" alt="Project Image 4">
                             <p class="image-label">Balcony</p>
                         </div>
                         <div class="gallery-item">
-                            <img src="images/A2glifada7.jpg" alt="Project Image 4">
+                            <img src="images/A2glifada7.webp" alt="Project Image 4">
                             <p class="image-label">Living Room</p>
                         </div>
                         <div class="gallery-item">
-                            <img src="images/A2glifada8.jpg" alt="Project Image 4">
+                            <img src="images/A2glifada8.webp" alt="Project Image 4">
                             <p class="image-label">Balcony</p>
                         </div>
                         <div class="gallery-item">
-                            <img src="images/A2glifada9.jpg" alt="Project Image 4">
+                            <img src="images/A2glifada9.webp" alt="Project Image 4">
                             <p class="image-label">Living Room</p>
                         </div>
                         <div class="gallery-item">
-                            <img src="images/A2glifada11.jpg" alt="Project Image 4">
+                            <img src="images/A2glifada11.webp" alt="Project Image 4">
                             <p class="image-label">Kitchen</p>
                         </div>
                         <div class="gallery-item">
-                            <img src="images/A2glifada12.jpg" alt="Project Image 4">
+                            <img src="images/A2glifada12.webp" alt="Project Image 4">
                             <p class="image-label">Bedroom</p>
                         </div>
                         <div class="gallery-item">
-                            <img src="images/A2glifada13.jpg" alt="Project Image 4">
+                            <img src="images/A2glifada13.webp" alt="Project Image 4">
                             <p class="image-label">Balcony</p>
                         </div>
                         <div class="gallery-item">
-                            <img src="images/A2glifada14.jpg" alt="Project Image 4">
+                            <img src="images/A2glifada14.webp" alt="Project Image 4">
                             <p class="image-label">Bathroom</p>
                         </div>
                         <div class="gallery-item">
-                            <img src="images/A2glifada10.jpg" alt="Project Image 4">
+                            <img src="images/A2glifada10.webp" alt="Project Image 4">
                             <p class="image-label">Kitchen</p>
                         </div>
                         <div class="gallery-item">
-                            <img src="images/Α2glifada3dLivingroom.jpg" alt="Project Image 4">
+                            <img src="images/Α2glifada3dLivingroom.webp" alt="Project Image 4">
                             <p class="image-label">3D Living Room</p>
                         </div>
                         <div class="gallery-item">
-                            <img src="images/Α2glifada3dBedroom.jpg" alt="Project Image 4">
+                            <img src="images/Α2glifada3dBedroom.webp" alt="Project Image 4">
                             <p class="image-label">3D Bedroom</p>
                         </div>
                         <div class="gallery-item">
-                            <img src="images/Α2glifada3dBathroom.jpg" alt="Project Image 4">
+                            <img src="images/Α2glifada3dBathroom.webp" alt="Project Image 4">
                             <p class="image-label">3D Bathroom</p>
                         </div>
                     </div>
@@ -243,7 +243,7 @@
             <div>
                 <a href="project-glifada.html">
                     <div class="project">
-                        <img src="images/project1.png" alt="Modern Skyscraper">
+                        <img src="images/project1.webp" alt="Modern Skyscraper">
                         <div class="project-info">
                             <div class="state">Sold</div>
                             <h3>Modern Apartment Building</h3>
@@ -259,7 +259,7 @@
             <div>
                 <a href="project-voula166.html">
                     <div class="project">
-                        <img src="images/project2.png" alt="Luxury Villas">
+                        <img src="images/project2.webp" alt="Luxury Villas">
                         <div class="project-info">
                             <div class="state sale">For Sale</div>
                             <h3>Ground floor - 1st floor
@@ -277,7 +277,7 @@
             <div>
                 <a href="project-voula115.html">
                     <div class="project">
-                        <img src="images/project3.png" alt="Industrial Complex">
+                        <img src="images/project3.webp" alt="Industrial Complex">
                         <div class="project-info">
                             <div class="state sale">For Sale</div>
                             <h3>Ground floor - 1st floor
