--- a/projects.html
+++ b/projects.html
@@ -129,7 +129,7 @@
     <section class="projects-wrapper">
         <!-- Project 1 -->
         <div class="project-box">
-            <img src="images/A1glifada1.jpg" alt="Voula Maisonette">
+            <img src="images/A1glifada1.webp" alt="Voula Maisonette">
             <div class="project-details">
                 <h2>Glyfada Apartment Building</h2>
                 <p>Welcome to our latest apartment project, a stunning 
@@ -139,7 +139,7 @@
             </div>
         </div>
         <div class="project-box">
-            <img src="images/A1 Swimming pool.jpg" alt="Seaside Villa">
+            <img src="images/A1 Swimming pool.webp" alt="Seaside Villa">
             <div class="project-details">
                 <h2>Ground floor - 1st floor
                     Maisonette 166 sq.m.</h2>
@@ -149,7 +149,7 @@
         </div>
         <!-- Project 2 -->
         <div class="project-box ">
-            <img src="images/A2_swimming_pool.jpg" alt="Luxury Apartments">
+            <img src="images/A2_swimming_pool.webp" alt="Luxury Apartments">
             <div class="project-details">
                 <h2>Ground floor - 1st floor
                     Maisonette 115 sq.m.</h2>
