--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <div class="projects">
             <a href="project-glifada.html">
                 <div class="project">
-                    <img src="images/project1.png" alt="Modern Skyscraper">
+                    <img src="images/project1.webp" alt="Modern Skyscraper">
                     <div class="project-info">
                         <div class="state">Sold</div>
                         <h3>Modern Apartment Building</h3>
@@ -77,7 +77,7 @@
             <div>
                 <a href="project-voula166.html">
                     <div class="project">
-                        <img src="images/project2.png" alt="Luxury Villas">
+                        <img src="images/project2.webp" alt="Luxury Villas">
                         <div class="project-info">
                             <div class="state sale">For Sale</div>
                             <h3>Ground floor - 1st floor
@@ -95,7 +95,7 @@
             <div>
                 <a href="project-voula115.html">
                     <div class="project">
-                        <img src="images/project3.png" alt="Industrial Complex">
+                        <img src="images/project3.webp" alt="Industrial Complex">
                         <div class="project-info">
                             <div class="state sale">For Sale</div>
                             <h3>Ground floor - 1st floor
