--- a/forsale.html
+++ b/forsale.html
@@ -133,7 +133,7 @@
             <div class="project-details">
                 <h2>Ground floor - 1st floor
                     Maisonette 166 sq.m.</h2>
-                <p>An exquisite beachfront villa offering panoramic sea views and top-tier amenities.</p>
+                <p>A modern apartment building featuring two exclusive residences, designed for comfort and elegance.</p>
                 <a href="project-voula166.html" class="view-btn">View Project</a>
             </div>
         </div>
