--- a/projects.html
+++ b/projects.html
@@ -143,7 +143,7 @@
             <div class="project-details">
                 <h2>Ground floor - 1st floor
                     Maisonette 166 sq.m.</h2>
-                <p>A modern apartment building featuring two exclusive residences, designed for comfort and elegance.</p>
+                <p>A charming duplex apartment (maisonette) located in the southern suburbs Athens at Athenian Riviera, offering exclusive use of a private garden and swimming pool, designed for comfort and elegance.</p>
                 <a href="project-voula166.html" class="view-btn">View Project</a>
             </div>
         </div>
@@ -153,7 +153,7 @@
             <div class="project-details">
                 <h2>Ground floor - 1st floor
                     Maisonette 115 sq.m.</h2>
-                <p>A modern apartment building featuring two exclusive residences, designed for comfort and elegance.</p>
+                <p>A charming duplex apartment (maisonette) located in the southern suburbs Athens at Athenian Riviera, offering exclusive use of a private garden and swimming pool, designed for comfort and elegance.</p>
                 <a href="project-voula115.html" class="view-btn">View Project</a>
             </div>
         </div>
