--- a/project-glifada.html
+++ b/project-glifada.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MyDevelopment Constructions</title>
+    <title>M.Y. Development Constructions | Project Glyfada </title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="project.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300..700&family=Euphoria+Script&family=Ibarra+Real+Nova:ital,wght@0,400..700;1,400..700&family=Jura:wght@300..700&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link rel="icon" href="images/LOGO-FOR-WEB-200-PIXELS.png" type="image/x-icon">
 
 </head>
 <body>
