--- a/projects.html
+++ b/projects.html
@@ -3,8 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Our Projects</title>
+    <title>M.Y. Development Constructions | Our Projects</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="images/LOGO-FOR-WEB-200-PIXELS.png" type="image/x-icon">
+
     <style>
         /* Global Styles */
        
