--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="images/LOGO-FOR-WEB-200-PIXELS.png" type="image/x-icon">
-    <title>MyDevelopment Constructions | Contact</title>
+    <title>M.Y. Development Constructions | Contact</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="contact.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
