--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
 <body>
     <header>
         <div class="header">
-            <a href="index.html" class="logo-link-mobile"><img class="logo" src="/images/LOGO-FOR-WEB-200-PIXELS.png" alt="mydevelopment Logo"></a>
+            <a href="index.html" class="logo-link-mobile"><img class="logo" src="/images/LOGO-FOR-WEB-200-PIXELS.png" alt="M.Y. Development Logo"></a>
             <div class="burger-menu">&#9776;</div>
             <nav>
                 <ul>
                     <li><a href="index.html">HOME</a></li>
                     <li><a href="projects.html">PROJECTS</a></li>
-                    <li><a href="../index.html" class="logo-link"><img class="logo" src="/images/LOGO-FOR-WEB-200-PIXELS.png" alt="mydevelopment Logo"></a>
+                    <li><a href="../index.html" class="logo-link"><img class="logo" src="/images/LOGO-FOR-WEB-200-PIXELS.png" alt="M.Y. Development Logo"></a>
                     </li>
                     <li><a href="forsale.html">FOR&nbsp;SALE</a></li>
                     <li><a href="contact.html">CONTACT</a></li>
@@ -31,7 +31,7 @@
     
     <section class="hero" id="hero">
         <div class="overlay">
-            <img src="images/LOGO-FOR-WEB-200-PIXELS.png" alt="">
+            <img src="images/LOGO-FOR-WEB-200-PIXELS.png" alt="MyDevelopment Logo">
             <div class="hero-text">
                 <h3>Real Estate Construction Company</h3>
                 <p>Welcome to M.Y. Development! We're all about turning your
